--- a/scripts/LiveDeploys-dump.ipynb
+++ b/scripts/LiveDeploys-dump.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "43da86a5",
+   "id": "2e68e1e0",
    "metadata": {},
    "outputs": [
     {
@@ -239,8 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "b49f74bc",
+   "execution_count": 24,
+   "id": "c364f2e1",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>class</th>\n",
+       "      <th>property</th>\n",
        "      <th>count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -571,7 +571,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               class count\n",
+       "                                            property count\n",
        "0                             http://schema.org/name  3285\n",
        "1    http://www.w3.org/1999/02/22-rdf-syntax-ns#type  2669\n",
        "2                       http://schema.org/identifier  1300\n",
@@ -587,7 +587,7 @@
        "[235 rows x 2 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
     "results = kg.query(query)\n",
     "data = []\n",
     "for r in results:\n",
-    "    data.append({\"class\":r[0], \"count\":r[1]})\n",
+    "    data.append({\"property\":r[0], \"count\":r[1]})\n",
     "    print(r[0], r[1])\n",
     "    \n",
     "df = pd.DataFrame.from_dict(data)\n",
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cc8373d",
+   "id": "056fb543",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68503c1d",
+   "id": "7e0b9711",
    "metadata": {},
    "outputs": [],
    "source": []
