updated data with FAIR-checker v1.2.5

--- a/scripts/LiveDeploys-dump.ipynb
+++ b/scripts/LiveDeploys-dump.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a13c6900",
+   "id": "8feddcd9",
    "metadata": {},
    "source": [
     "# Loading the LiveDeploys dump"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4474dc7",
+   "id": "6900c495",
    "metadata": {},
    "source": [
     "# Most used classes"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6ada495c",
+   "id": "a084a37c",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8c70272",
+   "id": "ba405bdc",
    "metadata": {},
    "source": [
     "# Most used properties"
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1faa4fc4",
+   "id": "2a24c838",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ef3cf23",
+   "id": "71a68198",
    "metadata": {},
    "source": [
     "# DefinedTerms"
@@ -642,24 +642,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "2f447a4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"\n",
-    "\n",
-    "SELECT ?s WHERE {\n",
-    "    ?s ?p <http://schema.org/DefinedTerm>\n",
-    "} \n",
-    "\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "b8b7468f",
    "metadata": {},
    "outputs": [
     {
@@ -824,11 +808,25 @@
     }
    ],
    "source": [
-    "results = kg.query(query)\n",
+    "query = \"\"\"\n",
+    "SELECT Distinct ?s WHERE {\n",
+    "    ?s ?p <http://schema.org/DefinedTerm>\n",
+    "} \n",
     "\n",
+    "\"\"\"\n",
+    "\n",
+    "results = kg.query(query)\n",
     "for r in results:\n",
     "    print(r[\"s\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8b7468f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -841,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e21190c",
+   "id": "f6429bd8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -849,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "566a56c6",
+   "id": "aba35453",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -857,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1c4a0e3",
+   "id": "7b13e6ad",
    "metadata": {},
    "outputs": [],
    "source": []
