--- a/scripts/LiveDeploys-dump.ipynb
+++ b/scripts/LiveDeploys-dump.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1982d6d6",
+   "id": "5463b6af",
    "metadata": {},
    "source": [
     "# Loading the LiveDeploys dump"
@@ -33,8 +33,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "883dcd43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        \"http://schema.org/url\": [\r\n",
+      "          {\r\n",
+      "            \"@id\": \"https://www.guidetopharmacology.org/GRAC/LigandDisplayForward?ligandId=4754\"\r\n",
+      "          }\r\n",
+      "        ]\r\n",
+      "      }\r\n",
+      "    ],\r\n",
+      "    \"@id\": \"https://www.guidetopharmacology.org/coronavirus.jsp#html\"\r\n",
+      "  }\r\n",
+      "]"
+     ]
+    }
+   ],
+   "source": [
+    "my_kg = ConjunctiveGraph()\n",
+    "my_kg.parse(\"out.nq\", format=\"nquads\")\n",
+    "my_kg.serialize(\"out.jsonld\", format=\"json-ld\")\n",
+    "\n",
+    "!tail -n 10 out.jsonld"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "b18a61c4",
+   "id": "b6c3defa",
    "metadata": {},
    "source": [
     "# Most used classes"
@@ -43,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "74365606",
+   "id": "55afd946",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a7f362",
+   "id": "a0ad8f28",
    "metadata": {},
    "source": [
     "# Most used properties"
@@ -273,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "957d790f",
+   "id": "b4bd6796",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "646f3c3b",
+   "id": "782fef58",
    "metadata": {},
    "source": [
     "# DefinedTerms"
@@ -884,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5074e2cf",
+   "id": "d334b103",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -892,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f7c1aa9",
+   "id": "09de1c9b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -900,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "595561dd",
+   "id": "a48cc8ec",
    "metadata": {},
    "outputs": [],
    "source": []
